--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "datatools"
-version = "0.1.0"
+name = "adt"
+description = "Aolwas data tools: small toy project for data processing while learning Rust"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.2.5", features = ["derive"] }
+clap = { version = "4.4.7", features = ["derive"] }
 anyhow = { version = "1" }
 thiserror = { version = "1" }
 chrono = { version = "0.4" }
