--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,11 @@ log = { version = "0.4" }
 simple_logger = { version = "4.2" }
 
 # sql dependencies
-arrow = { version = "47", features = ["prettyprint"] }
-deltalake = { version = "0.16", features = ["datafusion", "s3"]}
-datafusion = { version = "32" }
-object_store = { version = "0.7", features=["aws"] }
+arrow = { version = "49", features = ["prettyprint"] }
+#deltalake = { version = "0.16", features = ["datafusion-ext", "s3"]}
+deltalake = { git = "https://github.com/delta-io/delta-rs.git", tag = "python-v0.15.1", features = ["datafusion","s3"]}
+datafusion = { version = "34" }
+object_store = { version = "0.8", features=["aws"] }
 
 # tui
 crossterm = { version = "0.27" }
