--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "adt"
 description = "Aolwas data tools: small toy project for data processing while learning Rust"
-version = "1.0.1"
+version = "1.0.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,15 +15,15 @@ log = { version = "0.4" }
 simple_logger = { version = "4.2" }
 
 # sql dependencies
-arrow = { version = "49", features = ["prettyprint"] }
-#deltalake = { version = "0.16", features = ["datafusion-ext", "s3"]}
-deltalake = { git = "https://github.com/delta-io/delta-rs.git", tag = "python-v0.15.1", features = ["datafusion","s3"]}
-datafusion = { version = "34" }
-object_store = { version = "0.8", features=["aws"] }
+arrow = { version = "50", features = ["prettyprint"] }
+deltalake = { version = "0.17", features = ["datafusion", "s3"]}
+#deltalake = { git = "https://github.com/delta-io/delta-rs.git", tag = "python-v0.15.1", features = ["datafusion","s3"]}
+datafusion = { version = "35" }
+object_store = { version = "0.9", features=["aws"] }
 
 # tui
 crossterm = { version = "0.27" }
-ratatui = { version = "0.24" }
+ratatui = { version = "0.26" }
 
 # runtime
 tokio = { version = "1", features = ["full"] }
