--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ name = "adt"
 version = "0.1.0"
 description = "Add a short description here"
 channels = ["conda-forge"]
-platforms = ["osx-arm64"]
+platforms = ["osx-arm64", "linux-64"]
 
 [tasks]
 
