--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "adt"
 description = "Aolwas data tools: small toy project for data processing while learning Rust"
-version = "1.1.1"
+version = "1.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,10 +22,10 @@ object_store = { version = "0.10.1", features=["aws"] }
 
 # tui
 crossterm = { version = "0.27" }
-ratatui = { version = "0.26" }
+ratatui = { version = "0.27" }
 
 # runtime
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "^1.0", features = ["rt-multi-thread"] }
 futures = { version = "0.3" }
 
 # For future dev
