--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,13 @@ chrono = { version = "0.4" }
 url = { version = "2.3" }
 log = { version = "0.4" }
 simple_logger = { version = "4.2" }
+#secrecy = { version = "0.8.0" }
+snafu = { version = "0.8.4" }
 
 # sql dependencies
 arrow = { version = "52", features = ["prettyprint"] }
-deltalake = { version = "0.18.1", features = ["datafusion", "s3"]}
-datafusion = { version = "39" }
+delta_kernel = { version = "0.2", features = ["default-engine", "cloud"]}
+datafusion = { version = "40" }
 object_store = { version = "0.10.1", features=["aws"] }
 
 # tui
@@ -27,6 +29,7 @@ ratatui = { version = "0.27" }
 # runtime
 tokio = { version = "^1.0", features = ["rt-multi-thread"] }
 futures = { version = "0.3" }
+async-trait = { version = "0.1.81" }
 
 # For future dev
 # axum = { version = "0.6" }
